fix bold text issue on Safari

--- a/ReactWebApp/components/Projects/base.scss
+++ b/ReactWebApp/components/Projects/base.scss
@@ -196,6 +196,7 @@ $breakpoint: 1350;
     font-size: 25px;
     margin: 0 0 20px 0;
     line-height: 1.5;
+    font-weight: 400;
 
   }
 
